Added keynote speakers

--- a/index.html
+++ b/index.html
@@ -40,18 +40,19 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
-              <li class="nav-item">
-                  <a class="nav-link js-scroll-trigger" href="#cfp">Call for Papers</a>
-              </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#cfp">Call for Papers</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#program-committee">Program Committee</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#schedule">Schedule</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#organizers">Organizers</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
-            </li>
+
           </ul>
         </div>
       </div>
@@ -119,7 +120,30 @@
                     <h5>Notification by: <u>December 20, 2017.</u></h5>
                 </div>
             </div>
+        </div>
+    </section>
 
+    <section id="program-committee">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 ">
+                    <h2 class="section-heading text-center">Program Committee</h2>
+                    <ul>
+                        <li>Ananth Kalyanaraman, WSU</li>
+                        <li>Bertil Schmidt, University of Mainz</li>
+                        <li>Can Alkan, Bilkent University</li>
+                        <li>Engin Ipek, University of Rochester</li>
+                        <li>Jason Cong, UCLA</li>
+                        <li>Near-data (in-memory) acceleration bioinformatics and computational biology applications</li>
+                        <li>Mattan Erez, UT Austin</li>
+                        <li>Mircea Stan, UVA</li>
+                        <li>Onur Mutlu, ETH/CMU</li>
+                        <li>Ran Ginosar, Technion</li>
+                        <li>Srinivas Aluru, Georgia Tech</li>
+                        <li>Yuan Xie, UCSB</li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -135,70 +159,41 @@
         </div>
         <div class="row">
           <div class="col-lg-12">
+              <h2 class="padding-bottom-20">Keynote Speakers</h2>
             <ul class="timeline">
-              <li>
-                <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/1.jpg" alt="">
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4>2009-2011</h4>
-                    <h4 class="subheading">Our Humble Beginnings</h4>
-                  </div>
-                  <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                  </div>
-                </div>
-              </li>
+
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/2.jpg" alt="">
+                  <img class="rounded-circle img-fluid" src="img/speakers/omutlu.jpg" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>March 2011</h4>
-                    <h4 class="subheading">An Agency is Born</h4>
+                    <h4><a  href="https://people.inf.ethz.ch/omutlu/">Onur Mutlu, CMU / ETH Zurich</a></h4>
+                    <h3 class="subheading">“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</h3>
+                    <h5 class="subheading">9:00-10:00</h5>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                    <p class="text-muted">(Talk abstract placeholder)</p>
                   </div>
                 </div>
               </li>
-              <li>
+
+            <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
+                    <img class="rounded-circle img-fluid" src="img/speakers/Srinivas.jpg" alt="">
                 </div>
                 <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4>December 2012</h4>
-                    <h4 class="subheading">Transition to Full Service</h4>
-                  </div>
-                  <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                  </div>
+                    <div class="timeline-heading">
+                        <h4><a href="https://www.cc.gatech.edu/~saluru/">Srinivas Aluru, Georgia Tech</a></h4>
+                        <h3 class="subheading">“Automata Processor and its Applications in Bioinformatics”</h3>
+                        <h5 class="subheading">13:30-14:30</h5>
+                    </div>
+                    <div class="timeline-body">
+                        <p class="text-muted">(Talk abstract placeholder)</p>
+                    </div>
                 </div>
-              </li>
-              <li class="timeline-inverted">
-                <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4>July 2014</h4>
-                    <h4 class="subheading">Phase Two Expansion</h4>
-                  </div>
-                  <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                  </div>
-                </div>
-              </li>
-              <li class="timeline-inverted">
-                <div class="timeline-image">
-                  <h4>Be Part
-                    <br>Of Our
-                    <br>Story!</h4>
-                </div>
-              </li>
+            </li>
+
             </ul>
           </div>
         </div>
