--- a/index.html
+++ b/index.html
@@ -154,8 +154,63 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading">Schedule</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
           </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-3"></div>
+            <div class="col-lg-6">
+                <table id="scheulde-table" class="table-striped table-responsive table-hover">
+                    <tr>
+                        <td>8:45 - 9:00</td>
+                        <td>Opening Remarks</td>
+                    </tr>
+                    <tr>
+                        <td>9:00 - 10:00</td>
+                        <td>Keynote 1 - Onur Mutlu: “Accelerating Genome Analysis: A Primer on an Ongoing Journey”</td>
+                    </tr>
+                    <tr>
+                        <td>10:00 - 10:30</td>
+                        <td>Invited Talk - Bertil Schmidt: “Next Generation Sequencing: Big Data meets High Performance Computing Architectures”</td>
+                    </tr>
+                    <tr>
+                        <td>10:30 - 11:00</td>
+                        <td>Break</td>
+                    </tr>
+                    <tr>
+                        <td>11:00 - 12:00</td>
+                        <td>Paper session 1 (3 papers)</td>
+                    </tr>
+                    <tr>
+                        <td>12:00 - 13:30</td>
+                        <td>Lunch</td>
+                    </tr>
+                    <tr>
+                        <td>13:30 - 14:30</td>
+                        <td>Keynote 2 - Srinivas Aluru: “Automata Processor and its Applications in Bioinformatics”</td>
+                    </tr>
+                    <tr>
+                        <td>14:30 - 15:00</td>
+                        <td>Invited Talk - Ananth Kalyanaraman</td>
+                    </tr>
+                    <tr>
+                        <td>15:00 - 15:30</td>
+                        <td>Break</td>
+                    </tr>
+                    <tr>
+                        <td>15:30 - 16:10</td>
+                        <td>Paper session 2 (2 papers)</td>
+                    </tr>
+                    <tr>
+                        <td>16:10 - 17:00</td>
+                        <td>Invited Talk - Can Alkan</td>
+                    </tr>
+                    <tr>
+                        <td>17:10 - 17:20</td>
+                        <td>Closing remarks</td>
+                    </tr>
+                </table>
+            </div>
+
         </div>
         <div class="row">
           <div class="col-lg-12">
