Set first column width

--- a/index.html
+++ b/index.html
@@ -161,6 +161,10 @@
             <div class="col-lg-8">
                 <table id="scheulde-table" class="table-striped table-responsive table-hover">
                     <tr>
+                        <th style="width:120px"></th>
+                        <th></th>
+                    </tr>
+                    <tr>
                         <td>8:45 - 9:00</td>
                         <td>Opening Remarks</td>
                     </tr>
