Added padding to schedule

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <h2 class="section-heading">Schedule</h2>
           </div>
         </div>
-        <div class="row">
+        <div class="row padding-bottom-20">
             <div class="col-lg-2"></div>
             <div class="col-lg-8">
                 <table id="scheulde-table" class="table-striped table-responsive table-hover">
