--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     </h6>
                     <p>All papers will be evaluated based on their relation to the subject, novelty, fundamental insights, experimental evaluation, and potential for long-term impact.</p>
                     <p>The full version should be a PDF file in HPCA24 submission format. For formatting instructions please refer to:
-                        <a href="http://hpca2018.ece.ucsb.edu/pages/guidelines_for_submission.html">http://hpca2018.ece.ucsb.edu/pages/guidelines_for_submission.html</a>
+                        <a href="http://hpca2018.ece.ucsb.edu/pages/guidelines_for_submission.html">HPCA Guidelines for Submission</a>
                     </p>
 
                     <h2>Important Dates</h2>
@@ -275,7 +275,7 @@
               <img class="mx-auto rounded-circle" src="img/team/Leonid.jpg" alt="">
               <h4>Leonid Yavits</h4>
               <p class="oranizer-email">leonid@technion.ac.il</p>
-                <p class="text-left"><strong>Short bio:</strong>Leonid Yavits received his MSc and PhD in Electrical Engineering from the Technion. After graduating, he co-founded VisionTech where he co-designed a single chip MPEG2 codec. Following VisionTech’s acquisition by Broadcom, he co-founded Horizon Semiconductors where he co-designed a Set Top Box on chip for cable and satellite TV. <br>
+                <p class="text-left"><strong>Short bio:</strong> Leonid received his MSc and PhD in Electrical Engineering from the Technion. After graduating, he co-founded VisionTech where he co-designed a single chip MPEG2 codec. Following VisionTech’s acquisition by Broadcom, he co-founded Horizon Semiconductors where he co-designed a Set Top Box on chip for cable and satellite TV. <br>
                     Leonid is a postdoc fellow in Electrical Engineering in the Technion. He co-authored a number of patents and research papers on SoC and ASIC. His research interests include non von Neumann computer architectures and processing in memory</p>
             </div>
           </div>
@@ -286,7 +286,7 @@
               <h4>Roman Kaplan</h4>
               <p class="oranizer-email">sromanka@campus.technion.ac.il</p>
                 <p class="text-left"><strong>Short bio:</strong>
-                    Roman Kaplan received his BSC and MSc from the faculty of Electrical Engineering, Technion, Israel in 2009 and 2015, respectively. He is now a PhD candidate in the same faculty under the supervision of Prof. Ran Ginosar. <br>
+                    Roman received his BSC and MSc from the faculty of Electrical Engineering, Technion, Israel in 2009 and 2015, respectively. He is now a PhD candidate in the same faculty under the supervision of Prof. Ran Ginosar. <br>
                     Roman's research interests are parallel computer architectures, in-data processing, accelerators for machine learning and big data, and novel computer architectures for bioinformatics applications.
                 </p>
 
