--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Agency - Start Bootstrap Theme</title>
+    <title>AACBB - Workshop on Accelerator Architecture for Computational Biology and Bioinformatics</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -62,9 +62,12 @@
     <header class="masthead">
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Workshop on</div>
-                <div class="intro-heading">Accelerators for Computational Biology and Bioinformatics</div>
+                <div class="intro-lead-in">HPCA 2018 Workshop on</div>
+                <div class="intro-heading">Accelerator Architecture for Computational Biology and Bioinformatics</div>
+
             </div>
+            <h3 class="padding-bottom-10">February 24th, 2018</h3>
+            <h3 class="padding-bottom-10">Vienna, Austria</h3>
         </div>
     </header>
 
@@ -126,7 +129,8 @@
     <section id="program-committee">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 ">
+                <div class="col-sm-2"></div>
+                <div class="col-lg-8 ">
                     <h2 class="section-heading text-center">Program Committee</h2>
                     <ul>
                         <li>Ananth Kalyanaraman, WSU</li>
@@ -134,7 +138,6 @@
                         <li>Can Alkan, Bilkent University</li>
                         <li>Engin Ipek, University of Rochester</li>
                         <li>Jason Cong, UCLA</li>
-                        <li>Near-data (in-memory) acceleration bioinformatics and computational biology applications</li>
                         <li>Mattan Erez, UT Austin</li>
                         <li>Mircea Stan, UVA</li>
                         <li>Onur Mutlu, ETH/CMU</li>
